; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libucl/tests/extr_test_msgpack.c_ucl_test_large_string.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libucl/tests/extr_test_msgpack.c_ucl_test_large_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@UCL_STRING_RAW = common dso_local global i32 0, align 4
@UCL_OBJECT_BINARY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_4__* ()* @ucl_test_large_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_4__* @ucl_test_large_string() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  br label %4

4:                                                ; preds = %8, %0
  %5 = call i32 (...) @pcg32_random()
  store i32 %5, i32* %3, align 4
  %6 = srem i32 %5, 100000
  %7 = icmp eq i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %4
  br label %4

9:                                                ; preds = %4
  %10 = load i32, i32* %3, align 4
  %11 = srem i32 %10, 100000
  %12 = call i8* @malloc(i32 %11)
  store i8* %12, i8** %2, align 8
  %13 = load i8*, i8** %2, align 8
  %14 = load i32, i32* %3, align 4
  %15 = srem i32 %14, 100000
  %16 = load i32, i32* @UCL_STRING_RAW, align 4
  %17 = call %struct.TYPE_4__* @ucl_object_fromstring_common(i8* %13, i32 %15, i32 %16)
  store %struct.TYPE_4__* %17, %struct.TYPE_4__** %1, align 8
  %18 = load i32, i32* @UCL_OBJECT_BINARY, align 4
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = or i32 %21, %18
  store i32 %22, i32* %20, align 4
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  ret %struct.TYPE_4__* %23
}

declare dso_local i32 @pcg32_random(...) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local %struct.TYPE_4__* @ucl_object_fromstring_common(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
